--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
 <meta charset="utf-8">
 <title>Gaurav Dhenwal - Designer</title>
+<link rel="stylesheet" href="css/bootstrap.css"/>
+<link rel="stylesheet" href="css/animate.css"/>
+<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
+<script src="scripts/jquery.js"></script>
 </head>
 
 <body>
 <h1>Hello</h1>
+
+
+<script src="scripts/bootstrap.js"></script>
+<script src="scripts/home.js"></script>
 </body>
 </html>
