--- a/index.html
+++ b/index.html
@@ -1,31 +1,86 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="icon" type="icon" href='LOGO/icon.ico' />
+<meta charset="utf-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1" />
+
  <script src="scripts/jquery.js"></script>
- <script src="scripts/jquery.stellar.min.js"></script>
+
 
 <title>
 
 	Gaurav Dhenwal
 
 </title>
-<link rel="stylesheet" href="css/bootstrap.css" />
+<link rel="stylesheet" href="materialize/css/materialize.min.css" />
+<!-- ********roboto font******** -->
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,500i,700,900" rel="stylesheet">
+<!-- ************************** -->
 <link rel='stylesheet' href='font-awesome/css/font-awesome.css'/>
-<link rel='stylesheet' href="css/navigation.css" />
+
 <link rel="stylesheet" href="css/animate.css"/>
 <link rel="stylesheet" href="css/home.css"/>
 
 </head>
 <body >
+  <div class="row margin-none">
+    <div class="col-lg-12 banner">
+    </div>
+  </div>
+<div class="container margin-v-m5 z-depth-2">
+  <div class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s4">
+          <a href="#personal" class="waves-effect">Personal</a>
+        </li>
+        <li class="tab col s4">
+          <a href="#acedemic" class="waves-effect">Acedemic</a>
+        </li>
+        <li class="tab col s4">
+          <a href="#professional" class="waves-effect">Professional</a>
+        </li>
 
+      </ul>
+      <div id="personal" class="col s12">
+        <div class="row">
+          <div class="col m3">
+            <img src="images/face.jpg" alt="profile image" height="150" width="150" class="responsive-img ">
+          </div>
+          <div class="col m9 s12">
+            <div class="divider"></div>
+            <div class="section">
+              <p>Name</p>
+              <h5>Gaurav Dhanwal</h5>
+            </div>
+             <div class="divider"></div>
+             <div class="section">
+               <p>My birthday</p>
+               <h5>28 October 1993</h5>
+             </div>
+             <div class="divider"></div>
+             <div class="section">
+               <p>I am from</p>
+               <h5>Jaipur, Rajasthan</h5>
+             </div>
+             <div class="divider"></div>
+             <div class="section">
+                <p>
+                  Something  About Me
+                </p>
+                <p class="flow-text">Something something</p>
+             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 
 
-<script src="scripts/bootstrap.js"></script>
+<script src="materialize/js/materialize.min.js"></script>
 <script src="scripts/home.js"></script>
 
 </html>
