--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body >
   <div class="row margin-none">
     <div class="col-lg-12 banner">
+      <a class="waves-effect waves-light btn right">Hire Me</a>
     </div>
   </div>
 <div class="container margin-v-m5 z-depth-2">
@@ -70,6 +71,74 @@
                 </p>
                 <p class="flow-text">Something something</p>
              </div>
+          </div>
+        </div>
+      </div>
+      <!-- *************Acedemic************* -->
+      <div id="acedemic" class="col s12">
+        <div class="row">
+          <div class="col m3 s12  center-align">
+              <img src="images/Ecb_logo.png" alt="profile image" height="150" width="150" class="responsive-img  ">
+
+          </div>
+          <div class="col m9">
+            <h4>B.Tech. in Computer Science</h4>
+            <p>
+              Completed B.Tech. in 2016 from <strong><a href="http://www.ecb.ac.in" target="_blank">Govt. Engineering College Bikaner</a></strong>
+               with an aggergate percentage of 68 (CGPA 7.2).
+            </p>
+            <h5>Final year project</h5>
+            <p>
+              <strong>Infamous Cloud</strong><br />
+              Deployed a complete Cloud , providing services like Software,Storage,Infrastructure and Hadoop
+Cluster Deployed the cluster on Dockers (Containers).Also includes Online Data Analysis.
+(Presented this project in front of Red hat officials.)
+            </p>
+          </div>
+        </div>
+         <div class="divider"></div>
+         <div class="row padding-v-20">
+           <div class="col m3 s12 center-align">
+             <img src="images/lw.jpg" alt="profile image" height="150" width="150" class="responsive-img z-depth-2">
+
+           </div>
+           <div class="col m9">
+             <h4>Summer Internship</h4>
+            <p>
+
+
+              Done my summer industrial training at <a href="https://www.linuxworldindia.org" target="_blank"><strong>Linux World Jaipur</strong> </a> Being there, I have worked on different technologies like Cloud Computing, Hadoop, Openstack,
+Python, HTML5, Ajax, CSS3, Javascript, Python, Dockers
+            </p>
+           </div>
+         </div>
+         <div class="divider"></div>
+         <div class="row padding-v-20">
+           <div class="col m3 s12 center-align">
+             <img src="images/rbse.jpg" alt="profile image" height="150" width="150" class="responsive-img ">
+
+           </div>
+           <div class="col md-9">
+            <h4>Secondary Education</h4>
+            <p>
+              <strong>Senior Secondary(12th)</strong><br />
+              Navjevan Senior Secondary School Sikar with 71%.
+            </p>
+            <p>
+              <strong>Secondary(10th)</strong><br />
+              Emmanuel Mission School Sikar and scored 80.5%;
+            </p>
+           </div>
+         </div>
+      </div>
+      <!-- *****************Professional******************* -->
+      <div id="professional" class="col s12">
+        <div class="row">
+          <h4 class="center">Skills</h4>
+          <div class="row">
+            <div class="col m4 col s6 col l3">
+              <
+            </div>
           </div>
         </div>
       </div>
